[package]
name = "fisco-bcos-rust-gears-sdk"
version = "0.3.141"
edition = "2018"
authors = ["kentzhang <YOUKNOWTHAT@vip.qq.com>"]
repository = "https://github.com/FISCO-BCOS/rust-gears-sdk"
description = "rust sdk for fisco bcos 2.0。like some rusted but solid gears , help to build a rust blockchain client application with fisco-bcos"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# use lib default setting ,target is src/lib.rs

[dependencies]
#rustc-hex="1.0.0"
reqwest = { version = "0.11.3", features = ["json","blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
ethabi = "12.0.0"
hex-literal = "0.3"
hex = "0.4"
sha3 = "0.9"
ethereum-types = "0.9.2"
thiserror = "1"
uint = "0.9.0"
structopt = "0.3"
itertools = "0.10"
rand = "0.7"
wedpr_l_macros = "1.0.0"
wedpr_s_protos = "1.3.0"
wedpr_l_utils = "1.0.0"
wedpr_l_crypto_signature_secp256k1 = "1.0.0"
wedpr_l_crypto_hash_keccak256 = "1.0.0"
wedpr_l_common_coder_base64 = "1.0.0"
wedpr_l_crypto_ecies_secp256k1 = "1.1.0"
wedpr_l_crypto_signature_sm2 = "1.1.0"
wedpr_l_crypto_hash_sm3 = "1.1.0"
wedpr_l_libsm = "0.3.5"
secp256k1 = "0.17"
lazy_static = "1.4.0"
failure = "0.1"
rlp = { version = "0.4.6" }
keccak-hash = "0.5.0"
serde_repr = "0.1.7"
toml = "0.5.8"
libloading = "0.7.0"
libc="0.2.98"
pem = "0.8"
chrono="0.4"
time="0.1"
openssl = "0.10"
anyhow = "1"
log = "0.4"
log4rs = "1.0.0"
tokio = { version = "1", features = ["full"] }
bytes = "1"
colored ="2.0.0"
encoding="*"
rust-ini = {version ="*",features = ["inline-comment"] }

[dev-dependencies]
paste = "1"
primitive_types07 = { package = "primitive-types", version = "0.7"}


[features]
#default = []
#default = ["bcos3sdk_ffi","bcos2sdk_ffi"]
#default = ["bcos2sdk_ffi"]
default = ["bcos3sdk_ffi"]
tassl_sock_ffi = []
bcos2sdk_ffi =[]
bcos3sdk_ffi = []
bcos3sdk_native = []

